# SURIMI-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  app_factory.py  capabilities.py  catalog.py  citation_gate.py  docker-compose.yml  nc_tools.py  pyproject.toml  receipts.py  recipes.py  search.py  server.py  signed_tool.py  sql_tools.py  trino_client.py
.github/workflows/: docker.yml
data/: load_csv.py
data/init/: 01-schemas.sql
docs/: README.md  copilot-development-walkthrough.md
netcdf/: __init__.py  analytics.py  discovery.py  inspect.py  io.py  regions.py
rag/: docs.py  embed.py  extract.py  search.py
scripts/: debug-mcp.sh
tests/: conftest.py  test_app_factory.py  test_capabilities.py  test_citation_gate.py  test_fetchers.py  test_lookups.py  test_nc_analytics.py  test_nc_discovery.py  test_nc_inspect.py  test_nc_io.py  test_nc_regions.py  test_nc_tools.py  test_postgres.py  test_receipts.py  test_recipes.py  test_search.py  test_signed_tool.py  test_sql_tools.py
