[project]
name = "surimi-mcp"
version = "0.1.0"
description = "MCP server exposing SURIMI fisheries and OECD data via Trino"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "trino>=0.330",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
